Version 0.93 - 17 August 2012, by Per Øyvind Karlsen <peroyvind@mandriva.org>

- display_driver_helper: use the new modprobe --resolve-alias instead
  of manually parsing --dry-run output
- fix path to 'loadkeys'
- runlevel: Ensure that systemd targets corresponding to the required
  runlevel are also updated (in addition to inittab).
- fallback to X server run-time autodetection on laptops instead of
  1024x768 when the monitor could not be probed (Mageia #1059)
- do not try to probe monitor information via X server on laptops (it
  doesn't work with recent X servers)
- add support for Asturian keyboard
- prefer boot display devices when probing cards (fixes at least an issue
  with an SLI laptop as reported by Maarten Vanraes)
- harddrake: configure default resolution (and background) even if card
  configuration fails (useful if vbox video driver is not available)
- evdev needs to be loaded before calling getInputDevices_and_usb
  else it will lead to a crash (pterjan)
- display_driver_helper: do not load radeon driver if the proprietary
  driver is temporarily disabled on a PowerXpress system
- display_driver_helper: allow automatic loading of the implicit driver
  on systems without xorg.conf if the presence of other files indicates
  that this is not a live cd boot before automatic X.org configuration
  (fixes radeon KMS without xorg.conf)

Version 0.92 - 21 April 2011

- disable debug output of display_driver_helper by default
- fix ahead-of-X-server loading of proprietary and fglrx kernel modules
- try unloading unconfigured drivers in "display_driver_helper --check-loaded"

Version 0.91 - 17 April 2011

- use UseEdid instead of IgnoreEDID with nvidia96xx since the latter is
  obsolete (#40006)
- remove "3D hardware acceleration" from the UI, it will always be enabled
  by default since we unconditionnally add the "dri" module to xorg.conf now
  (#58933) 
- add display_driver_helper script (used by XFdrake, udev, drakx, dkms)