@@ -1,5 +1,6 @@
 Version 0.93 - 17 August 2012, by Per Øyvind Karlsen <peroyvind@mandriva.org>
 
+- do not offer to try KMS drivers during installation (mga#3711)
 - display_driver_helper: use the new modprobe --resolve-alias instead
   of manually parsing --dry-run output
 - fix path to 'loadkeys'
